[gd_scene load_steps=17 format=2]

[ext_resource path="res://scripts/game/Player.gd" type="Script" id=1]
[ext_resource path="res://scripts/game/Crosshair.gd" type="Script" id=2]
[ext_resource path="res://assets/crosshair.png" type="Texture" id=3]
[ext_resource path="res://assets/TextureAtlas.dds" type="Texture" id=4]
[ext_resource path="res://assets/font/JetBrainsMono-Bold.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scripts/game/block_management/BlockManagement.gd" type="Script" id=6]
[ext_resource path="res://assets/block_slots.svg" type="Texture" id=7]
[ext_resource path="res://assets/frame.svg" type="Texture" id=8]
[ext_resource path="res://assets/inventory.svg" type="Texture" id=9]
[ext_resource path="res://scripts/game/block_management/Inventory.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=4]
size = 24
outline_size = 4
font_data = ExtResource( 5 )

[sub_resource type="CapsuleMesh" id=1]
radius = 0.5
mid_height = 0.8

[sub_resource type="CylinderShape" id=2]
height = 1.8
radius = 0.5

[sub_resource type="AudioStreamGenerator" id=5]

[sub_resource type="AudioStreamMicrophone" id=6]

[sub_resource type="AtlasTexture" id=3]
flags = 7
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 16 )

[node name="Player" type="KinematicBody"]
collision_layer = 2
collision_mask = 3
script = ExtResource( 1 )

[node name="NameLabel" type="Label3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
pixel_size = 0.001
billboard = 1
no_depth_test = true
fixed_size = true
render_priority = 2
outline_render_priority = 1
font = SubResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
mesh = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 2 )

[node name="CeilingDetector" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0.4 )
enabled = true
cast_to = Vector3( 0, 0.5, 0 )

[node name="StairDetector" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.8, 0 )
enabled = true
cast_to = Vector3( 0, 0, -2 )
collision_mask = 3

[node name="CameraBase" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.85, 0 )

[node name="Headlamp" type="SpotLight" parent="CameraBase"]
light_energy = 0.0
spot_range = 50.0

[node name="VoiceOut" type="AudioStreamPlayer3D" parent="CameraBase"]
stream = SubResource( 5 )
autoplay = true
bus = "Voice"

[node name="Camera" type="Camera" parent="CameraBase"]
far = 1000.0

[node name="VoiceIn" type="AudioStreamPlayer" parent="CameraBase/Camera"]
stream = SubResource( 6 )
autoplay = true
bus = "VoiceIn"

[node name="RayCast" type="RayCast" parent="CameraBase/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -5 )

[node name="Sprite" type="Sprite" parent="CameraBase/Camera"]
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
script = ExtResource( 2 )

[node name="InfoLabel" type="Label" parent="CameraBase/Camera"]
margin_bottom = 22.0

[node name="BlockManagement" type="Control" parent="CameraBase/Camera"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
texture = SubResource( 3 )

[node name="Inventory" type="PopupPanel" parent="CameraBase/Camera/BlockManagement"]
margin_right = 392.0
margin_bottom = 234.0
script = ExtResource( 10 )

[node name="VBoxContainer" type="VBoxContainer" parent="CameraBase/Camera/BlockManagement/Inventory"]
margin_left = 4.0
margin_top = 4.0
margin_right = 388.0
margin_bottom = 230.0

[node name="Inventory" type="TextureRect" parent="CameraBase/Camera/BlockManagement/Inventory/VBoxContainer"]
margin_right = 384.0
margin_bottom = 174.0
texture = ExtResource( 9 )

[node name="SelectedBlocks" type="TextureRect" parent="CameraBase/Camera/BlockManagement/Inventory/VBoxContainer"]
margin_top = 178.0
margin_right = 384.0
margin_bottom = 226.0
texture = ExtResource( 7 )
stretch_mode = 4

[node name="Blocks" type="Control" parent="CameraBase/Camera/BlockManagement/Inventory"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Blocks" type="CenterContainer" parent="CameraBase/Camera/BlockManagement"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 200.0
margin_top = -48.0

[node name="Texture" type="TextureRect" parent="CameraBase/Camera/BlockManagement/Blocks"]
margin_left = 220.0
margin_right = 604.0
margin_bottom = 48.0
texture = ExtResource( 7 )

[node name="Previews" type="HBoxContainer" parent="CameraBase/Camera/BlockManagement/Blocks/Texture"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 6.0
margin_right = -3.0
margin_bottom = -6.0
custom_constants/separation = 0

[node name="SelectedBlock" type="TextureRect" parent="CameraBase/Camera/BlockManagement/Blocks/Texture"]
margin_left = 2.0
margin_top = 2.0
margin_right = 46.0
margin_bottom = 46.0
texture = ExtResource( 8 )

[connection signal="about_to_show" from="CameraBase/Camera/BlockManagement/Inventory" to="CameraBase/Camera/BlockManagement/Inventory" method="_on_about_to_show"]
[connection signal="popup_hide" from="CameraBase/Camera/BlockManagement/Inventory" to="CameraBase/Camera/BlockManagement/Inventory" method="_on_popup_hide"]
